[SH-140] cors issue was fixed

--- a/envs/dev.env
+++ b/envs/dev.env
@@ -10,7 +10,8 @@ KEYCLOAK_JWK_URI=http://localhost:8080/realms/skillshub/protocol/openid-connect/
 
 # --- Backend route (your monolith backend instance) ---
 # Points to your internal backend application (monolith modular)
-BACKEND_URI=http://localhost:8081
+#BACKEND_URI=http://localhost:8081
+BACKEN_URI=http://localhost:10020
 
 # --- Logging levels ---
 # You can increase to DEBUG while developing to see all routing details
