--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,30 +3,37 @@ spring:
     name: gateway-service
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:dev}
-
   main:
     web-application-type: reactive
-
   security:
     oauth2:
       resourceserver:
         jwt:
           issuer-uri: ${KEYCLOAK_ISSUER_URI:http://localhost:8085/realms/skillshub}
           jwk-set-uri: ${KEYCLOAK_JWK_URI:http://localhost:8085/realms/skillshub/protocol/openid-connect/certs}
-
   cloud:
     config:
       enabled: false
+      import-check:
+        enabled: false
+
     gateway:
       globalcors:
-        # ✅ Nécessaire pour que les requêtes OPTIONS soient gérées
+        # need to manage OPTIONS requests
         add-to-simple-url-handler-mapping: true
         corsConfigurations:
           '[/**]':
-            allowedOriginPatterns: [ "http://localhost:5173", "http://127.0.0.1:5173" ]
-            allowedMethods: [ "*" ]
+            allowedOriginPatterns:
+              - ${ALLOWED_ORIGIN_1:http://localhost:5173}
+              - ${ALLOWED_ORIGIN_2:http://127.0.0.1:5173}
+            allowedMethods: [ "GET", "POST", "PUT", "DELETE", "OPTIONS" ]
             allowedHeaders: [ "*" ]
-            exposedHeaders: [ "*" ]
+            exposedHeaders:
+              - "Authorization"
+              - "X-User-Email"
+              - "X-User-Roles"
+              - "X-Service"
+              - "X-Gateway"
             allowCredentials: true
       default-filters:
         - AddResponseHeader=X-Gateway,Skillshub-Gateway
@@ -52,13 +59,5 @@ management:
 
 logging:
   level:
-    org.springframework.cloud.gateway: DEBUG
-    org.springframework.http.server.reactive: DEBUG
-    reactor.netty.http.client: DEBUG
-    reactor.netty.http.server: DEBUG
-
-# ALLOWED_ORIGINS can be set dynamically:
-# Example (dev):
-#  ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
-# Example (prod):
-#  ALLOWED_ORIGINS=https://www.skillshub.com,https://admin.skillshub.com
+    org.springframework.cloud.gateway: INFO
+    reactor.netty.http.server: INFO
