--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,49 +3,48 @@ spring:
     name: gateway-service
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:dev}
-
   main:
     web-application-type: reactive
-
   security:
     oauth2:
       resourceserver:
         jwt:
           issuer-uri: ${KEYCLOAK_ISSUER_URI:http://localhost:8085/realms/skillshub}
           jwk-set-uri: ${KEYCLOAK_JWK_URI:http://localhost:8085/realms/skillshub/protocol/openid-connect/certs}
-
   cloud:
     config:
       enabled: false
-      discovery:
+      import-check:
         enabled: false
+
     gateway:
       globalcors:
+        # need to manage OPTIONS requests
         add-to-simple-url-handler-mapping: true
-        cors-configurations:
+        corsConfigurations:
           '[/**]':
-            allowedOrigins:
-              - "http://localhost:5173"
-            allowedMethods:
-              - GET
-              - POST
-              - PUT
-              - DELETE
-              - OPTIONS
-            allowedHeaders:
-              - "*"
+            allowedOriginPatterns:
+              - ${ALLOWED_ORIGIN_1:http://localhost:5173}
+              - ${ALLOWED_ORIGIN_2:http://127.0.0.1:5173}
+            allowedMethods: [ "GET", "POST", "PUT", "DELETE", "OPTIONS" ]
+            allowedHeaders: [ "*" ]
+            exposedHeaders:
+              - "Authorization"
+              - "X-User-Email"
+              - "X-User-Roles"
+              - "X-Service"
+              - "X-Gateway"
             allowCredentials: true
       default-filters:
         - AddResponseHeader=X-Gateway,Skillshub-Gateway
       routes:
         - id: backend
-          uri: ${BACKEND_URI:http://localhost:8081}
+          uri: ${BACKEND_URI:http://localhost:10020}
           predicates:
             - Path=/api/**
           filters:
             - PreserveHostHeader
-            - RewritePath=/api/(?<segment>.*), /${segment}
-
+            - RewritePath=/api/(?<segment>.*), /api/${segment}
 server:
   port: ${SERVER_PORT:8080}
 
@@ -60,7 +59,5 @@ management:
 
 logging:
   level:
-    root: INFO
-    org.springframework.cloud.gateway: DEBUG
-    org.springframework.security: INFO
-    com.skillshub.gateway: DEBUG
+    org.springframework.cloud.gateway: INFO
+    reactor.netty.http.server: INFO
