[SH-163] promote student to tutor

--- a/envs/dev/dev.env
+++ b/envs/dev/dev.env
@@ -44,3 +44,7 @@ SKILLSHUB_REDIRECT_URI=http://localhost:8080/api/auth/callback
 
 COOKIE_SECURE=true
 COOKIE_SAME_SITE=None
+
+# ============================================
+KEYCLOAK_ADMIN_CLIENT_ID=keycloak-admin-gateway
+KEYCLOAK_ADMIN_CLIENT_SECRET=tREGFqWl58f1fih4IsQZjdsrRXniXtTk
