[SH-164] run service in docker environment

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,13 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Envs ###
+
+*.env
+*.env.*
+.env
+.env.*
+/env/**/local.env
+/env/**/docker-hybrid.env
+/env/**/docker-all.env
